<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_radii"
    android:padding="@dimen/card_padding"
    android:layout_margin="@dimen/card_margin"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:transitionName="@string/detailTransition"
            android:src="@drawable/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:srcCompat="@drawable/loading" />

        <LinearLayout
            android:id="@+id/countContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <TextView
                android:id="@+id/like"
                android:layout_width="match_parent"
                android:layout_height="@dimen/score_height"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/like"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/score_height"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/comment"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="@dimen/score_height"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/share"
                android:textAlignment="center"
                 />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/actionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countContainer">

            <ImageButton
                android:id="@+id/likeAction"
                android:layout_width="match_parent"
                android:layout_height="@dimen/score_height"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_like_white_24dp"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/commentAction"
                android:layout_width="match_parent"
                android:layout_height="@dimen/score_height"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_insert_comment_white_24dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
            <ImageButton
                android:id="@+id/shareAction"
                android:layout_width="match_parent"
                android:layout_height="@dimen/score_height"
                android:layout_weight="1"
                android:rotationY="5033"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_reply_white_24dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

        </LinearLayout>
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/title"
            android:padding="4dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/downloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/image"
            app:srcCompat="@drawable/ic_file_download_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</layout>