<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="192dp"
            android:layout_width="match_parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                app:contentScrim="?attr/colorPrimary">

                <ImageView
                    android:id="@+id/parallaxImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/loading"
                    android:scaleType="centerCrop" />

<!--                <androidx.appcompat.widget.Toolbar-->
<!--                    android:id="@+id/toolbar"-->
<!--                    android:background="@android:color/transparent"-->
<!--                    android:layout_height="?attr/actionBarSize"-->
<!--                    android:layout_width="match_parent">-->

<!--                </androidx.appcompat.widget.Toolbar>-->
                <ImageButton
                    android:layout_gravity="end"
                    android:id="@+id/downloadButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    app:srcCompat="@drawable/ic_file_download_black_24dp" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/recentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/title"
                        android:textAlignment="gravity"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/countContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image">

                        <TextView
                            android:id="@+id/like"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/score_height"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/like"
                            android:textAlignment="center"
                            />

                        <TextView
                            android:id="@+id/comment"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/score_height"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/comment"
                            android:textAlignment="center"
                            />
                        <TextView
                            android:id="@+id/share"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/score_height"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/share"
                            android:textAlignment="center"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/actionsContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:background="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/countContainer">

                        <ImageButton
                            android:id="@+id/likeAction"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/score_height"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_like_white_24dp"
                            android:textColor="#FFFFFF" />

                        <ImageButton
                            android:id="@+id/commentAction"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/score_height"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_insert_comment_white_24dp"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF" />
                        <ImageButton
                            android:id="@+id/shareAction"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/score_height"
                            android:layout_weight="1"
                            android:rotationY="5033"
                            android:gravity="center_vertical"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_reply_white_24dp"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF" />

                    </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:orientation="vertical"
                    android:id="@+id/saved_posts"
                    tools:listitem="@layout/post_layout"
                    tools:itemCount="3"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:spanCount="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>